--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ scikit-learn
 spacy
 tabulate
 pydantic
+spacy==3.7.2
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
